* vm_eval.c (vm_call0_body): check interrupts after method dispatch   from C methods. [Bug #7878]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@39308 b2dd03c8-39d4-4d8f-98ff-823fe69b080e